# p2p-bench

./: .gitignore  README.md  make_charts.py  plot_context_curve.py  quality_kld.py  run_context_sweep.sh
p2p-bench/: .gitignore  README.md  pyproject.toml  requirements.txt
p2p-bench/config/: README.md  scenarios.yaml
p2p-bench/config/5060ti-16gb/4-cards/: context_p2p.scenarios.yaml  headline_p2p.scenarios.yaml  longctx_batch.scenarios.yaml  mtp_p2p.scenarios.yaml  parallelism_p2p.scenarios.yaml  single_card_nvfp4.scenarios.yaml
p2p-bench/examples/: llama-swap.config.yaml
p2p-bench/p2pbench/: __init__.py  analyze.py  bench.py  cli.py  environment.py  gpu.py  scenarios.py  swap.py  telemetry.py
p2p-bench/results/: llama-swap.config.yaml
p2p-bench/results/2026-06-16_5060ti-16gb_2cards_gen3-x4_p2p-sweep-c1-2-4-8/: llama-swap.config.yaml  summary.csv  summary.json  summary.md
p2p-bench/results/2026-06-16_5060ti-16gb_2cards_gen3-x4_p2p-sweep-c1-2-4-8/env/: dmesg_gpu.txt  kernel_cmdline.txt  lsmod_full.txt  p2p_evidence.json
p2p-bench/results/2026-06-17_5060ti-16gb_2cards_gen3-x4_p2p-sweep-c1-2-4-8/: llama-swap.config.yaml
p2p-bench/results/2026-06-17_5060ti-16gb_2cards_gen3-x4_p2p-sweep-c1-2-4-8/env/: host_summary.json  p2p_evidence.json
p2p-bench/results/env/: dmesg_gpu.txt  host_summary.json  kernel_cmdline.txt  kernel_modules.txt  lsmod_full.txt  p2p_evidence.json
p2p-bench/results/run5/: llama-swap.config.yaml
p2p-bench/results/run5/env/: dmesg_gpu.txt  host_summary.json  kernel_cmdline.txt  kernel_modules.txt  lsmod_full.txt  p2p_evidence.json
(+347 files in other folders)
